--- a/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
+++ b/VirtualWardrobe/VirtualWardrobe/Base.lproj/Main.storyboard
@@ -162,25 +162,21 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="sectionIndexBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <view key="tableFooterView" contentMode="scaleToFill" id="SCx-gr-EcU">
-                            <rect key="frame" x="0.0" y="261" width="375" height="59"/>
+                            <rect key="frame" x="0.0" y="261" width="375" height="44"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="drB-JC-wte">
-                                    <rect key="frame" x="19" y="13" width="34" height="33"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="34" id="RoM-YG-bI8"/>
-                                        <constraint firstAttribute="height" constant="33" id="mls-A9-6uO"/>
-                                    </constraints>
-                                    <state key="normal" image="AddSymbol"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="J6q-pB-qEc" customClass="CurvedEdgeButton" customModule="VirtualWardrobe" customModuleProvider="target">
+                                    <rect key="frame" x="163" y="6" width="49" height="30"/>
+                                    <state key="normal" title="Submit"/>
                                     <connections>
-                                        <action selector="addNewItemCell:" destination="gAa-oh-XE0" eventType="touchUpInside" id="teK-3L-Skq"/>
+                                        <action selector="addOutfit:" destination="gAa-oh-XE0" eventType="touchUpInside" id="pyB-jd-DNP"/>
                                     </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="drB-JC-wte" firstAttribute="centerY" secondItem="SCx-gr-EcU" secondAttribute="centerY" id="Q8N-Ye-OWi"/>
-                                <constraint firstItem="drB-JC-wte" firstAttribute="leading" secondItem="SCx-gr-EcU" secondAttribute="leading" constant="19" id="wa5-pN-5pp"/>
+                                <constraint firstItem="J6q-pB-qEc" firstAttribute="centerX" secondItem="SCx-gr-EcU" secondAttribute="centerX" id="xGx-HX-YPS"/>
+                                <constraint firstAttribute="bottom" secondItem="J6q-pB-qEc" secondAttribute="bottom" constant="8" id="ych-68-UUt"/>
                             </constraints>
                         </view>
                         <prototypes>
@@ -290,6 +286,9 @@
                             <outlet property="delegate" destination="gAa-oh-XE0" id="D53-ux-gf8"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <outlet property="bottomBarView" destination="SCx-gr-EcU" id="OuX-gV-mf6"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fyX-bV-X9z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -396,8 +395,12 @@
                             <outlet property="delegate" destination="vab-uq-4le" id="WdF-pC-4ms"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="CEK-Ee-sct" kind="unwind" identifier="UnwindToAddOutfits" unwindAction="unwindToAddOutfit:" id="U1Q-4X-bff"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8pu-FX-Pey" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="CEK-Ee-sct" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4248.8000000000002" y="-602.24887556221893"/>
         </scene>
